--- a/templates/default/nova.conf.erb
+++ b/templates/default/nova.conf.erb
@@ -141,3 +141,6 @@ keystone_ec2_url=http://<%= @keystone_api_ipaddress %>:<%= @keystone_service_por
 ##### VOLUMES #####
 # iscsi target user-land tool to use
 iscsi_helper=<%= @iscsi_helper %>
+<%- if /cinder/.match(@volume_api) %>
+volume_api_class=nova.volume.cinder.API
+<%- end %>
