--- a/templates/default/nova.conf.erb
+++ b/templates/default/nova.conf.erb
@@ -143,4 +143,5 @@ keystone_ec2_url=http://<%= @keystone_api_ipaddress %>:<%= @keystone_service_por
 iscsi_helper=<%= @iscsi_helper %>
 <%- if /cinder/.match(@volume_api) %>
 volume_api_class=nova.volume.cinder.API
+enabled_apis=ec2,osapi_compute,metadata
 <%- end %>
