--- a/templates/default/libvirtd.conf.erb
+++ b/templates/default/libvirtd.conf.erb
@@ -36,8 +36,7 @@ listen_tls = 0
 # DIGEST_MD5 and GSSAPI (Kerberos5)
 #
 # This is disabled by default, uncomment this to enable it.
-listen_tcp = 1
-
+listen_tcp = <%= node["nova"]['libvirt']['tcp_listen'] ? "1" : "0"  %>
 
 
 # Override the port for accepting secure TLS connections
