--- a/templates/default/nova.conf.erb
+++ b/templates/default/nova.conf.erb
@@ -161,7 +161,7 @@ quantum_admin_password=<%= @quantum_user_pass %>
 quantum_admin_auth_url=http://<%= @keystone_api_ipaddress %>:<%= @keystone_service_port %>/v2.0/
 
 service_quantum_metadata_proxy = True
-quantum_metadata_proxy_shared_secret = blabla
+quantum_metadata_proxy_shared_secret = <%= @quantum_metadata_shared_secret %>
 security_group_api=<%= @security_group_api %>
 
 <% if @quantum_plugin == "ovs" %>
